--- a/res/layout/login_layout.xml
+++ b/res/layout/login_layout.xml
@@ -11,6 +11,6 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:text="Twitter Sign in" />
+        android:text="@string/login" />
 
 </RelativeLayout>
