--- a/res/layout/login_layout.xml
+++ b/res/layout/login_layout.xml
@@ -13,4 +13,14 @@
         android:layout_centerVertical="true"
         android:text="@string/login" />
 
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="77dp"
+        android:text="@string/title"
+        android:textSize="30dp" />
+
 </RelativeLayout>
