--- a/res/layout/activity_search.xml
+++ b/res/layout/activity_search.xml
@@ -1,5 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -8,21 +9,39 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".SearchActivity" >
 
-    <ListView
-        android:id="@+id/listViewResult"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        
-        android:layout_marginTop="36dp"
-        android:visibility="invisible" >
-    </ListView>
+<!--     <CheckBox -->
+<!--         android:id="@+id/checkParallel" -->
+<!--         android:layout_width="wrap_content" -->
+<!--         android:layout_height="wrap_content" -->
+<!--         android:layout_alignParentLeft="true" -->
+<!--         android:layout_alignParentTop="true" -->
+<!--         android:text="Parallel Tasks" /> -->
 
-    <CheckBox
-        android:id="@+id/checkParallel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:text="Parallel Tasks" />
-  
+<!-- 	<FrameLayout -->
+<!--         android:layout_width="match_parent" -->
+<!--         android:layout_height="50dp" > -->
+
+<!--         <com.bootcamp.globant.view.ScrollableImageView -->
+<!--             android:id="@+id/blurred_image_header" -->
+<!--             android:layout_width="match_parent" -->
+<!--             android:layout_height="50dp" /> -->
+<!--         <TextView  -->
+<!--             android:layout_width="match_parent" -->
+<!--             android:layout_height="match_parent" -->
+<!--             android:text="Background blur" -->
+<!--             android:background="@drawable/header" -->
+<!--             android:gravity="center_vertical" -->
+<!--             android:textSize="18sp" -->
+<!--             android:paddingLeft="10dp"/> -->
+<!--         <Switch  -->
+<!--             android:layout_width="wrap_content" -->
+<!--             android:layout_height="wrap_content" -->
+<!--             android:id="@+id/background_switch" -->
+<!--             android:layout_marginRight="15dp" -->
+<!--             android:checked="true" -->
+<!--             android:textOn="On" -->
+<!--             android:textOff="Off" -->
+<!--             android:layout_gravity="center_vertical|right"/> -->
+<!--     </FrameLayout> -->
+    
 </RelativeLayout>
