--- a/res/layout/fragments_header.xml
+++ b/res/layout/fragments_header.xml
@@ -2,27 +2,29 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
-    
+
         <com.bootcamp.globant.view.ScrollableImageView
             android:id="@+id/blurred_image_header"
             android:layout_width="match_parent"
             android:layout_height="50dp" />
+        
         <TextView 
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="Background blur"
+            android:text="@string/prallel_tasks"
             android:background="@drawable/header"
             android:gravity="center_vertical"
             android:textSize="18sp"
             android:paddingLeft="10dp"/>
+        
         <Switch 
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/background_switch"
             android:layout_marginRight="15dp"
-            android:checked="true"
+            android:checked="false"
             android:textOn="On"
             android:textOff="Off"
             android:layout_gravity="center_vertical|right"/>
-        
+
 </FrameLayout>
